# cpr_asctec_quadrotor

cpr_asctec_control/: CMakeLists.txt  package.xml
cpr_asctec_control/config/: hummingbird_controller.yaml  hummingbird_limits.yaml  hummingbird_params.yaml  pelican_controller.yaml  pelican_limits.yaml  pelican_params.yaml
cpr_asctec_control/launch/: control.launch  teleop.launch
cpr_asctec_description/: CMakeLists.txt  package.xml
cpr_asctec_description/launch/: description.launch
cpr_asctec_description/urdf/: hummingbird.urdf.xacro  materials.urdf  pelican.urdf.xacro
cpr_asctec_driver/: CMakeLists.txt  package.xml
cpr_asctec_driver/debian/: ros-kinetic-cpr-asctec-driver.udev
cpr_asctec_driver/include/cpr_asctec_driver/: asctec_hardware.h  asctec_serial.h
cpr_asctec_driver/launch/: base.launch  teleop.launch
cpr_asctec_driver/src/: asctec_hardware.cpp  asctec_node.cpp  asctec_serial.cpp
cpr_asctec_driver/udev/: 99-ftdi.rules  99-pnp0501.rules
cpr_asctec_gazebo/: CMakeLists.txt  package.xml
cpr_asctec_gazebo/launch/: spawn_quadrotor.launch  teleop.launch
cpr_asctec_gazebo/urdf/: hummingbird.gazebo.xacro  pelican.gazebo.xacro  plugins.gazebo.xacro
cpr_asctec_gazebo/worlds/: empty.world.xacro
cpr_asctec_viz/: CMakeLists.txt  package.xml
cpr_asctec_viz/launch/: view_model.launch
cpr_asctec_viz/rviz/: 1_uav.rviz  four_uavs.rviz  teleop.rviz  three_uavs.rviz  two_uavs.rviz  view_model.rviz
cpr_quadrotor_waypoint_demo/: CMakeLists.txt  package.xml
cpr_quadrotor_waypoint_demo/config/: hex_pattern.yaml  single_pattern.yaml  square_pattern.yaml
cpr_quadrotor_waypoint_demo/launch/: sim_hex_demo.launch  sim_square_demo.launch
cpr_quadrotor_waypoint_demo/src/: path_follower.cpp
