<package format="2">
  <name>cpr_asctec_driver</name>
  <version>0.0.0</version>
  <description>TODO</description>

  <author email="paul@bovbel.com">Paul Bovbel</author>

  <maintainer email="paul@bovbel.com">Paul Bovbel</maintainer>
  <maintainer email="tbaltovski@clearpath.ai">Tony Baltovski</maintainer>

  <url type="website">http://ros.org/wiki/cpr_asctec_driver</url>
  <url type="bugtracker">https://github.com/clearpathrobotics/cpr_asctec_quadrotor/issues</url>
  <url type="repository">https://github.com/clearpathrobotics/cpr_asctec_quadrotor</url>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>controller_manager</depend>
  <depend>hardware_interface</depend>
  <depend>hector_quadrotor_interface</depend>
  <depend>hector_uav_msgs</depend>
  <depend>roscpp</depend>
  <depend>serial</depend>

  <exec_depend>cpr_asctec_control</exec_depend>
  <exec_depend>cpr_asctec_description</exec_depend>

  <test_depend>roslaunch</test_depend>
  <test_depend>roslint</test_depend>
</package>
