<package format="2">
  <name>cpr_quadrotor_waypoint_demo</name>
  <version>0.0.0</version>
  <description>TODO</description>

  <license>BSD</license>

  <author email="paul@bovbel.com">Paul Bovbel</author>

  <maintainer email="paul@bovbel.com">Paul Bovbel</maintainer>
  <maintainer email="tbaltovski@clearpath.ai">Tony Baltovski</maintainer>

  <url type="website">http://ros.org/wiki/cpr_quadrotor_waypoint_demo</url>
  <url type="bugtracker">https://github.com/clearpathrobotics/cpr_asctec_quadrotor/issues</url>
  <url type="repository">https://github.com/clearpathrobotics/cpr_asctec_quadrotor</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>actionlib</depend>
  <depend>geometry_msgs</depend>
  <depend>hector_uav_msgs</depend>
  <depend>roscpp</depend>
  <depend>tf2_geometry_msgs</depend>

  <exec_depend>cpr_asctec_gazebo</exec_depend>
  <exec_depend>cpr_asctec_viz</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>

  <test_depend>roslaunch</test_depend>
  <test_depend>roslint</test_depend>

</package>
